--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "gatsby-plugin-offline": "^1.0.1",
     "gatsby-plugin-react-helmet": "^1.0.1",
     "gatsby-plugin-sass": "^1.0.1",
+    "gatsby-source-contentful": "^1.3.1",
     "gatsby-source-filesystem": "^1.4.1",
-    "gatsby-transformer-json": "^1.0.1"
+    "gatsby-transformer-json": "^1.0.1",
+    "prop-types": "^15.5.10"
   },
   "keywords": [
     "gatsby"
