--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "gatsby-source-contentful": "^1.3.1",
     "gatsby-source-filesystem": "^1.4.1",
     "gatsby-transformer-json": "^1.0.1",
-    "prop-types": "^15.5.10"
+    "prop-types": "^15.5.10",
+    "slug": "^0.9.1"
   },
   "keywords": [
     "gatsby"
